--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/akinhwan/Startup-Pitch-Generator#readme",
   "dependencies": {
-    "bulma": "^0.7.5",
-    "serverless-python-requirements": "^4.3.0"
+    "bulma": "^0.7.5"
+  },
+  "devDependencies": {
+    "serverless-python-requirements": "^4.3.0",
+    "serverless-wsgi": "^1.7.2"
   }
 }
